--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   go_router: ^16.0.0
   flutter_dotenv: ^5.2.1
   dio: ^5.8.0+1
+  riverpod: ^2.6.1
 
 dev_dependencies:
   flutter_test:
