--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_dotenv: ^5.2.1
   dio: ^5.8.0+1
   flutter_riverpod: ^2.6.1
+  card_swiper: ^3.0.1
 
 dev_dependencies:
   flutter_test:
