list movies horizontal

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   dio: ^5.8.0+1
   flutter_riverpod: ^2.6.1
   card_swiper: ^3.0.1
+  animate_do: ^4.2.0
 
 dev_dependencies:
   flutter_test:
